crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__triple_quoted_mac_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: triple_quoted_eol(MAC_EOL)
---
## Tokens
```
[
    String 0..21 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING),
    Newline 21..21,
]
```
