crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__triple_quoted_windows_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: triple_quoted_eol(WINDOWS_EOL)
---
## Tokens
```
[
    String 0..23 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING),
    Newline 23..23,
]
```
