crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_conversion.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    TStringStart 0..2 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 2..3,
    Identifier 3..4,
    Exclamation 4..5,
    Identifier 5..6,
    Rbrace 6..7,
    TStringMiddle 7..8 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 8..9,
    Identifier 9..10,
    Equal 10..11,
    Exclamation 11..12,
    Identifier 12..13,
    Rbrace 13..14,
    TStringMiddle 14..15 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 15..16,
    Identifier 16..17,
    Colon 17..18,
    TStringMiddle 18..23 (flags = DOUBLE_QUOTES | T_STRING),
    Rbrace 23..24,
    TStringMiddle 24..32 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 32..33 (flags = DOUBLE_QUOTES | T_STRING),
    Newline 33..33,
]
```
